--- a/_events/2025-02-17-coffee.md
+++ b/_events/2025-02-17-coffee.md
@@ -10,6 +10,8 @@ venue_name: "Compass Coffee (College Park)"
 location: "4210 Knox Rd, College Park, MD 20740, USA"
 photo: "/assets/img/events/CoffeeBitcoinMD.jpg"
 layout: event
+author: Trey
+tags: [event, maryland, coffee]
 ---
 
 Bitcoin District is a community of Bitcoiners living & working in the greater DMV metro area. Join us for a "Coffee & Bitcoin" meetup where we'll talk about what's happening in the world of Bitcoin.
@@ -19,8 +21,8 @@ We highly encourage anyone who is new to Bitcoin or just a little curious to com
 Is Bitcoin a Smart Savings Strategy or a Risky Investment?Is holding Bitcoin a long-term savings strategy like digital gold, or is it a high-risk investment with uncertain returns? Join us as we discuss Bitcoin’s role in wealth preservation, portfolio growth, and the risks and rewards of holding Bitcoin in today’s changing financial landscape.
 
 🚗 Street parking is available along Knox Rd and Guilford Rd <br />
-🚆 METRO: College Park Station (green line) + 1 mile walk
-🚆 MARC: College Park Station (Baltimore-Camden Line) + 1 mile walk
+🚆 METRO: College Park Station (green line) + 1 mile walk <br />
+🚆 MARC: College Park Station (Baltimore-Camden Line) + 1 mile walk <br />
 
 Be sure to check out the special Bitcoin Blend, an El Salvador single-origin roast from our host Compass Coffee. You can order from their website and you can even pay in Bitcoin!
 
