--- a/_pages/404.md
+++ b/_pages/404.md
@@ -2,6 +2,10 @@
 layout: single
 title: Page Not Found
 permalink: /404/
+pagination: false
 ---
 
-## Page Not Found
+<div style="text-align: center;">
+  <img src="/assets/img/404.svg" alt="404 Not Found" style="max-width: 60%; height: auto;">
+  <h2>Sorry, this page is as elusive as Satoshi Nakamoto.</h2>
+</div>
