--- a/_posts/2025-03-08-coffee.md
+++ b/_posts/2025-03-08-coffee.md
@@ -7,6 +7,7 @@ description: "Join us in Falls Church, Virginia to talk about Bitcoin over coffe
 venue_name: "Compass Coffee (Falls Church)"
 location: "7393 Lee Hwy, Falls Church, VA 22042, USA"
 layout: event
+author_profile: false
 photo: "/assets/img/events/coffee-va.jpg"
 categories:
     - events
