--- a/_posts/2025-04-10-bitdevs.md
+++ b/_posts/2025-04-10-bitdevs.md
@@ -7,6 +7,7 @@ description: "BitDevs is a community for those interested in discussing and part
 venue_name: "Strategy, HQ"
 location: "1850 Towers Cres Plaza, Tysons, VA 22182, USA"
 layout: event
+author_profile: true
 author: DC BitDevs
 photo: "/assets/img/events/bitdevs.jpg"
 categories:
@@ -31,13 +32,14 @@ tags:
 
 ## Getting There by Car:
 <ul>
-    <li> Follow the road to the parking garage on the left side of the MicroStrategy HQ building (follow the fountains).
-    <li> Continue down the road passed the marked visitor's parking and proceed down the garage ramp. "1850 Parking" is the sign to follow.
-    <li> Proceed to get a ticket and park anywhere that is not reserved.
-    <li> Take the garage elevator to the Lobby.
-    <li> Once in the Lobby, let Security know you're there for the MicroStrategy event on the 7th floor. Security will escort you to the 7th floor.
+    <li> Follow the road to the parking garage on the left side of the MicroStrategy HQ building (follow the fountains).</li>
+    <li> Continue down the road passed the marked visitor's parking and proceed down the garage ramp. "1850 Parking" is the sign to follow.</li>
+    <li> Proceed to get a ticket and park anywhere that is not reserved.</li>
+    <li> Take the garage elevator to the Lobby.</li>
+    <li> Once in the Lobby, let Security know you're there for the MicroStrategy event on the 7th floor. Security will escort you to the 7th floor.</li>
 </ul>
 
 **Issue parking?** Contact Facilities at FacilitiesAdministration@microstrategy.com or VAQuikPark at (703) 459-452
 
-By Metro: 15min walk from Tysons Metro Station (Silver Line)
+## By Metro:
+15min walk from Tysons Metro Station (Silver Line)
