--- a/_posts/2025-02-17-coffee.md
+++ b/_posts/2025-02-17-coffee.md
@@ -4,7 +4,7 @@ date: 2025-02-17 10:00:00 -05:00
 end_date: 2025-02-17 12:00:00 -05:00
 rsvp_url: "https://www.meetup.com/bitcoin-district/events/306141868/"
 description: "Join us in College Park for a Coffee & Bitcoin meetup."
-venue_name: "Compass Coffee (College Park)"
+venue: "Compass Coffee (College Park)"
 location: "4210 Knox Rd, College Park, MD 20740, USA"
 layout: event
 photo: "/assets/img/events/coffee-md.jpg"
