--- a/_posts/2025-03-13-bitdevs13.md
+++ b/_posts/2025-03-13-bitdevs13.md
@@ -4,8 +4,7 @@ date: 2025-03-13 17:30:00 -05:00
 end_date: 2025-03-13 21:30:00 -05:00
 rsvp_url: "https://www.meetup.com/dc-bit-devs/events/305832599"
 description: "BitDevs is a community for those interested in discussing and participating in the research and development of Bitcoin and related protocols. You can be well versed with or new to the topics, all are welcome."
-venue_name: "Strategy, HQ"
-location: "1850 Towers Cres Plaza, Tysons, VA 22182, USA"
+venue: "Strategy HQ"
 layout: event
 author_profile: true
 author: DC BitDevs
@@ -29,17 +28,6 @@ tags:
 5:30pm - 6:30pm: Doors open and social hour<br />
 6:30pm - 9:30pm: BitDevs Socratic Seminar<br />
 9:30pm - 10:00pm: Departure
-
-## Getting There by Car:
-<ul>
-    <li> Follow the road to the parking garage on the left side of the MicroStrategy HQ building (follow the fountains).</li>
-    <li> Continue down the road passed the marked visitor's parking and proceed down the garage ramp. "1850 Parking" is the sign to follow.</li>
-    <li> Proceed to get a ticket and park anywhere that is not reserved.</li>
-    <li> Take the garage elevator to the Lobby.</li>
-    <li> Once in the Lobby, let Security know you're there for the MicroStrategy event on the 7th floor. Security will escort you to the 7th floor.</li>
-</ul>
-
-**Issue parking?** Contact Facilities at FacilitiesAdministration@microstrategy.com or VAQuikPark at (703) 459-452
 
 ## By Metro:
 15min walk from Tysons Metro Station (Silver Line)
