--- a/_posts/2025-04-11-opnext.md
+++ b/_posts/2025-04-11-opnext.md
@@ -3,9 +3,8 @@ title: "OP_NEXT Scaling Conference"
 date: 2025-04-11 09:00:00 -04:00
 end_date: 2025-04-12 17:00:00 -04:00
 rsvp_url: "https://opnext.dev/"
-description: "A scaling conference for Bitcoin builders, developers and founders. Hosted by MicroStrategy in Tysons, VA on April 11-12, 2025."
-venue_name: "Strategy, HQ"
-location: "1850 Towers Cres Plaza, Tysons, VA 22182, USA"
+description: "A scaling conference for Bitcoin builders, developers and founders. Hosted by Strategy₿ in Tysons, VA on April 11-12, 2025."
+venue: "Strategy HQ"
 layout: event
 photo: "/assets/img/events/op_next.jpg"
 categories:
