--- a/_posts/2025-06-25-bpi.md
+++ b/_posts/2025-06-25-bpi.md
@@ -4,7 +4,7 @@ date: 2025-06-25 08:00:00 -04:00
 end_date: 2025-06-25 17:00:00 -04:00
 rsvp_url: "https://www.btcpolicy.org/"
 description: "BPI will host the 2025 Bitcoin Policy Summit where top executives, policymakers, and experts will set the course for American leadership in the digital age."
-venue_name: "Venue TBD"
+venue: "Venue TBD"
 location: "Location TBD"
 layout: event
 photo: "/assets/img/events/bpisummit.jpg"
