--- a/_posts/2025-09-30-btcindc.md
+++ b/_posts/2025-09-30-btcindc.md
@@ -4,7 +4,7 @@ date: 2025-09-30 09:00:00 -04:00
 end_date: 2025-10-01 17:00:00 -04:00
 rsvp_url: "https://btcindc.com/"
 description: "BTC in DC is a new conference in downtown DC. Join industry leaders, technologists, investors and visionaries as we explore and shape the future of Bitcoin, right at the core of decision making."
-venue_name: "Venue TBD"
+venue: "Venue TBD"
 location: "Location TBD"
 layout: event
 photo: "/assets/img/events/btcindc.jpg"
