--- a/_posts/2025-02-17-coffee.md
+++ b/_posts/2025-02-17-coffee.md
@@ -7,7 +7,9 @@ description: "Join us in College Park for a Coffee & Bitcoin meetup."
 venue: "Compass Coffee (College Park)"
 location: "4210 Knox Rd, College Park, MD 20740, USA"
 layout: event
-photo: "/assets/img/events/coffee-md.jpg"
+header:
+    image: "/assets/img/events/coffee-md.jpg"
+    og_image: "/assets/img/events/coffee-md.jpg"
 author: Trey
 categories:
     - events
