--- a/_posts/2025-02-20-bitdevs12.md
+++ b/_posts/2025-02-20-bitdevs12.md
@@ -7,7 +7,9 @@ description: "BitDevs is a community for those interested in discussing and part
 venue: "Strategy HQ"
 layout: event
 author: DC BitDevs
-photo: "/assets/img/events/bitdevs.jpg"
+header:
+    image: "/assets/img/events/bitdevs.jpg"
+    og_image: "/assets/img/events/bitdevs.jpg"
 categories:
     - events
     - bitdevs
