--- a/_posts/2025-03-08-coffee.md
+++ b/_posts/2025-03-08-coffee.md
@@ -7,7 +7,9 @@ description: "Join us in Falls Church, Virginia to talk about Bitcoin over coffe
 venue: "Compass Coffee (Falls Church)"
 layout: event
 author_profile: false
-photo: "/assets/img/events/coffee-va.jpg"
+header:
+    image: "/assets/img/events/coffee-va.jpg"
+    og_image: "/assets/img/events/coffee-va.jpg"
 categories:
     - events
 tags:
