--- a/_posts/2025-04-10-bitdevs14.md
+++ b/_posts/2025-04-10-bitdevs14.md
@@ -8,7 +8,9 @@ venue: "Strategy HQ"
 layout: event
 author_profile: true
 author: DC BitDevs
-photo: "/assets/img/events/bitdevs.jpg"
+header:
+    image: "/assets/img/events/bitdevs.jpg"
+    og_image: "/assets/img/events/bitdevs.jpg"
 categories:
     - events
     - bitdevs
