--- a/_posts/2025-04-11-opnext.md
+++ b/_posts/2025-04-11-opnext.md
@@ -6,7 +6,9 @@ rsvp_url: "https://opnext.dev/"
 description: "A scaling conference for Bitcoin builders, developers and founders. Hosted by Strategy₿ in Tysons, VA on April 11-12, 2025."
 venue: "Strategy HQ"
 layout: event
-photo: "/assets/img/events/op_next.jpg"
+header:
+    image: "/assets/img/events/op_next.jpg"
+    og_image: "/assets/img/events/op_next.jpg"
 categories:
     - events
     - conferences
