--- a/_posts/2025-06-25-bpi.md
+++ b/_posts/2025-06-25-bpi.md
@@ -7,7 +7,9 @@ description: "BPI will host the 2025 Bitcoin Policy Summit where top executives,
 venue: "Venue TBD"
 location: "Location TBD"
 layout: event
-photo: "/assets/img/events/bpisummit.jpg"
+header:
+    image: "/assets/img/events/bpisummit.jpg"
+    og_image: "/assets/img/events/bpisummit.jpg"
 categories:
     - events
     - conferences
