--- a/_posts/2025-03-13-bitdevs13.md
+++ b/_posts/2025-03-13-bitdevs13.md
@@ -9,6 +9,9 @@ layout: event
 author_profile: true
 author: DC BitDevs
 photo: "/assets/img/events/bitdevs.jpg"
+header:
+    image: "/assets/img/events/bitdevs.jpg"
+    og_image: "/assets/img/events/bitdevs.jpg"
 categories:
     - events
     - bitdevs
