--- a/_posts/2025-09-30-btcindc.md
+++ b/_posts/2025-09-30-btcindc.md
@@ -7,7 +7,9 @@ description: "BTC in DC is a new conference in downtown DC. Join industry leader
 venue: "Venue TBD"
 location: "Location TBD"
 layout: event
-photo: "/assets/img/events/btcindc.jpg"
+header:
+    image: "/assets/img/events/btcindc.jpg"
+    og_image: "/assets/img/events/btcindc.jpg"
 categories:
     - events
     - conferences
