--- a/_posts/2025-09-30-btcindc.md
+++ b/_posts/2025-09-30-btcindc.md
@@ -3,12 +3,11 @@ title: "BTC in DC Conference"
 date: 2025-09-30 09:00:00 -04:00
 end_date: 2025-10-01 17:00:00 -04:00
 rsvp_url: "https://btcindc.com/"
-description: "BTC in DC is a new conference in downtown DC. Join industry leaders, technologists, investors and visionaries as we explore and shape the future of Bitcoin, right at the core of decision making."
+description: "BTC in DC is a new conference in downtown DC."
 venue: "Venue TBD"
-location: "Location TBD"
+address: "Address TBD"
 layout: event
 header:
-    image: "/assets/img/events/btcindc.jpg"
     og_image: "/assets/img/events/btcindc.jpg"
 categories:
     - events
@@ -19,9 +18,10 @@ tags:
     - conference
 ---
 
-**BTC in DC** is a new conference in downtown DC. Join industry leaders, technologists, investors and visionaries as we explore and shape the future of Bitcoin, right at the core of decision making. Speakers who are shaping the future, conversations that drive impact and connections that can change everything. This is more than just a conference. This is a moment in Bitcoin's history.
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/togDCcvNZYY?si=_VJAwo33cKLoq_Xp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
 
+**BTC in DC** is a new conference in downtown DC. Join industry leaders, technologists, investors and visionaries as we explore and shape the future of Bitcoin, right at the core of decision making. Speakers who are shaping the future, conversations that drive impact and connections that can change everything. This is more than just a conference. This is a moment in Bitcoin's history.  
 
-Official Website: <a href="https://btcindc.com">https://btcindc.com</a>
+🌐 Official Website: [https://btcindc.com](https://btcindc.com)
 
-Follow on X: <a href="https://x.com/btcindc_">https://x.com/btcindc_</a>
+👉 Follow on X: [https://x.com/btcindc_](https://x.com/btcindc_)
