--- a/_posts/2025-02-17-coffee.md
+++ b/_posts/2025-02-17-coffee.md
@@ -5,7 +5,7 @@ end_date: 2025-02-17 12:00:00 -05:00
 rsvp_url: "https://www.meetup.com/bitcoin-district/events/306141868/"
 description: "Join us in College Park for a Coffee & Bitcoin meetup."
 venue: "Compass Coffee (College Park)"
-location: "4210 Knox Rd, College Park, MD 20740, USA"
+address: "4210 Knox Rd, College Park, MD 20740, USA"
 layout: event
 header:
     image: "/assets/img/events/coffee-md.jpg"
@@ -19,16 +19,16 @@ tags:
     - coffee
 ---
 
-Bitcoin District is a community of Bitcoiners living & working in the greater DMV metro area. Join us for a "Coffee & Bitcoin" meetup where we'll talk about what's happening in the world of Bitcoin.
+Bitcoin District is a community of Bitcoiners living & working in the greater DMV metro area. Join us for a "Coffee & Bitcoin" meetup where we'll talk about what's happening in the world of Bitcoin.  
 
-We highly encourage anyone who is new to Bitcoin or just a little curious to come and ask questions.. don't be shy!
+We highly encourage anyone who is new to Bitcoin or just a little curious to come and ask questions.. don't be shy!  
 
 Is Bitcoin a Smart Savings Strategy or a Risky Investment?Is holding Bitcoin a long-term savings strategy like digital gold, or is it a high-risk investment with uncertain returns? Join us as we discuss Bitcoin’s role in wealth preservation, portfolio growth, and the risks and rewards of holding Bitcoin in today’s changing financial landscape.
 
-🚗 Street parking is available along Knox Rd and Guilford Rd <br />
-🚆 METRO: College Park Station (green line) + 1 mile walk <br />
-🚆 MARC: College Park Station (Baltimore-Camden Line) + 1 mile walk <br />
+🚗 Street parking is available along Knox Rd and Guilford Rd  
+🚆 METRO: College Park Station (green line) + 1 mile walk  
+🚆 MARC: College Park Station (Baltimore-Camden Line) + 1 mile walk  
 
-Be sure to check out the special Bitcoin Blend, an El Salvador single-origin roast from our host Compass Coffee. You can order from their website and you can even pay in Bitcoin!
+Be sure to check out the special Bitcoin Blend, an El Salvador single-origin roast from our host Compass Coffee. You can order from [their website](https://www.compasscoffee.com/products/bitcoin-blend) and you can even pay in Bitcoin!  
 
-Our events are Bitcoin focused and we generally avoid discussing other coins & tokens. Nothing discussed during this meetup is financial advice. Always do your own research.
+Our events are Bitcoin focused and we generally avoid discussing other coins & tokens. Nothing discussed during this meetup is financial advice. Always do your own research.  
