--- a/_posts/2025-03-08-coffee.md
+++ b/_posts/2025-03-08-coffee.md
@@ -4,7 +4,7 @@ date: 2025-03-08 10:00:00 -05:00
 end_date: 2025-03-08 12:00:00 -05:00
 rsvp_url: "https://www.meetup.com/bitcoin-district/events/305102396"
 description: "Join us in Falls Church, Virginia to talk about Bitcoin over coffee!"
-venue: "Compass Coffee (Falls Church)"
+venue: compass-7393lee
 layout: event
 author_profile: false
 header:
@@ -23,5 +23,7 @@ tags:
 We highly encourage anyone who is new to Bitcoin or just a little curious to come and ask questions.. don't be shy!
 
 Is Bitcoin a Smart Savings Strategy or a Risky Investment?Is holding Bitcoin a long-term savings strategy like digital gold, or is it a high-risk investment with uncertain returns? Join us as we discuss Bitcoin’s role in wealth preservation, portfolio growth, and the risks and rewards of holding Bitcoin in today’s changing financial landscape.
+
+Be sure to check out the special Bitcoin Blend, an El Salvador single-origin roast from our host Compass Coffee. You can order from [their website](https://www.compasscoffee.com/products/bitcoin-blend) and you can even pay in Bitcoin!  
 
 **Our events are Bitcoin focused and we generally avoid discussing other coins & tokens. Nothing discussed during this meetup is financial advice. Always do your own research.**
