--- a/_posts/2025-04-11-opnext.md
+++ b/_posts/2025-04-11-opnext.md
@@ -3,8 +3,8 @@ title: "OP_NEXT Scaling Conference"
 date: 2025-04-11 09:00:00 -04:00
 end_date: 2025-04-12 17:00:00 -04:00
 rsvp_url: "https://opnext.dev/"
-description: "A scaling conference for Bitcoin builders, developers and founders. Hosted by Strategy₿ in Tysons, VA on April 11-12, 2025."
-venue: "Strategy HQ"
+description: "A scaling conference for Bitcoin builders, developers and founders. Hosted by Strategy₿ in Tysons, VA"
+venue: strategyhq
 layout: event
 header:
     image: "/assets/img/events/op_next.jpg"
@@ -18,10 +18,8 @@ tags:
     - conference
 ---
 
-OP_NEXT brings developers & Bitcoin stakeholders together for a neutral, in-person conference discussing proposals, demonstrating implementations, and considering scaling solutions. 
+OP_NEXT brings developers & Bitcoin stakeholders together for a neutral, in-person conference discussing proposals, demonstrating implementations, and considering scaling solutions.  
 
-No booths, no shills, no tokens. Just Bitcoin scaling, with OPNEXT.
+No booths, no shills, no tokens. Just Bitcoin scaling, with OPNEXT.  
 
-Official Website: https://opnext.dev/
-
-This is an external event. Please visit the https://opnext.dev/ website for the most up-to-date information and registration details.
+🌐 Official Website: [https://opnext.dev](https://opnext.dev)  
