--- a/_posts/2025-02-17-coffee.md
+++ b/_posts/2025-02-17-coffee.md
@@ -3,7 +3,7 @@ title: "Bitcoin: Smart Savings or Risky Investment?"
 date: 2025-02-17 10:00:00 -05:00
 end_date: 2025-02-17 12:00:00 -05:00
 rsvp_url: "https://www.meetup.com/bitcoin-district/events/306141868/"
-description: "Join us in College Park for a Coffee & Bitcoin meetup."
+description: "Join Bitcoin District for one of our 'Coffee & Bitcoin' meetups to discuss the latest Bitcoin news over coffee! We meet at least once a month."
 venue: "Compass Coffee (College Park)"
 address: "4210 Knox Rd, College Park, MD 20740, USA"
 layout: event
