--- a/_posts/2025-02-20-bitdevs12.md
+++ b/_posts/2025-02-20-bitdevs12.md
@@ -3,7 +3,7 @@ title: "DC BitDevs #012"
 date: 2025-02-20 17:30:00 -05:00
 end_date: 2025-02-20 21:30:00 -05:00
 rsvp_url: "https://www.meetup.com/dc-bit-devs/events/305782723"
-description: "BitDevs is a community for those interested in discussing and participating in the research and development of Bitcoin and related protocols. You can be well versed with or new to the topics, all are welcome."
+description: "A community for those interested in discussing and participating in the research and development of Bitcoin and related protocols."
 venue: strategyhq
 layout: event
 author: DC BitDevs
