--- a/_posts/2025-03-08-coffee.md
+++ b/_posts/2025-03-08-coffee.md
@@ -3,7 +3,7 @@ title: "Coffee & Bitcoin - Falls Church"
 date: 2025-03-08 10:00:00 -05:00
 end_date: 2025-03-08 12:00:00 -05:00
 rsvp_url: "https://www.meetup.com/bitcoin-district/events/305102396"
-description: "Join us in Falls Church, Virginia to talk about Bitcoin over coffee!"
+description: "Join Bitcoin District for one of our 'Coffee & Bitcoin' meetups to discuss the latest Bitcoin news over coffee! We meet at least once a month."
 venue: compass-7393lee
 layout: event
 author_profile: false
