--- a/_posts/2025-09-30-btcindc.md
+++ b/_posts/2025-09-30-btcindc.md
@@ -3,7 +3,7 @@ title: "BTC in DC Conference"
 date: 2025-09-30 09:00:00 -04:00
 end_date: 2025-10-01 17:00:00 -04:00
 rsvp_url: "https://btcindc.com/"
-description: "BTC in DC is a new conference in downtown DC."
+description: "Join industry leaders, technologists, investors and visionaries as we explore and shape the future of Bitcoin during a new conference in downtown DC."
 venue: "Venue TBD"
 address: "Address TBD"
 layout: event
