--- a/_posts/2025-04-11-opnext.md
+++ b/_posts/2025-04-11-opnext.md
@@ -3,7 +3,7 @@ title: "OP_NEXT Scaling Conference"
 date: 2025-04-11 09:00:00 -04:00
 end_date: 2025-04-12 17:00:00 -04:00
 rsvp_url: "https://opnext.dev/"
-description: "A scaling conference for Bitcoin builders, developers and founders. Hosted by Strategy₿ in Tysons, VA"
+description: "A scaling conference for Bitcoin builders, developers and founders. Hosted by Strategy₿ in Tysons, Virginia."
 venue: strategyhq
 layout: event
 header:
@@ -23,3 +23,4 @@ OP_NEXT brings developers & Bitcoin stakeholders together for a neutral, in-pers
 No booths, no shills, no tokens. Just Bitcoin scaling, with OPNEXT.  
 
 🌐 Official Website: [https://opnext.dev](https://opnext.dev)  
+👉 Follow [@blockspacepod](https://x.com/blockspacepod) on X
