minor event changes

--- a/_posts/2025-02-26-bookclub.md
+++ b/_posts/2025-02-26-bookclub.md
@@ -23,4 +23,4 @@ In Abundance Through Scarcity, [Ioni Appelberg](https://x.com/IoniAppelberg), a 
 
 The book traces a path from the forgotten empires of the past to the anticipated civilizations of the future. It navigates through the shackles of traditional slavery, shedding light on the prisons of modern-day cubicles.  
 
-Buy the book on [BitcoinBook.shop](http://bitcoinbook.shop) or on [Amazon](https://a.co/d/eTddH7N).  
+Buy the book on [BitcoinBook.shop](https://bitcoinbook.shop/products/abundance-through-scarcity) or on [Amazon](https://a.co/d/eTddH7N).  
