--- a/_posts/2025-02-26-bookclub.md
+++ b/_posts/2025-02-26-bookclub.md
@@ -17,6 +17,7 @@ tags:
     - event
     - dc
     - bookclub
+comments: true
 ---
 
 In Abundance Through Scarcity, [Ioni Appelberg](https://x.com/IoniAppelberg), a medical doctor, psychonaut, and martial artist, embarks on a thought-provoking exploration that challenges the hidden forms of slavery in our modern world. Appelberg exposes the illusory nature of voluntary servitude with captivating prose and profound insights and directly calls us to reclaim our freedom.  
