--- a/_posts/2025-09-30-btcindc.md
+++ b/_posts/2025-09-30-btcindc.md
@@ -16,6 +16,7 @@ tags:
     - event
     - dc
     - conference
+comments: false # enable if discussions are useful on this post
 ---
 
 **BTC in DC** is a new conference in downtown DC. Join industry leaders, technologists, investors and visionaries as we explore and shape the future of Bitcoin, right at the core of decision making. Speakers who are shaping the future, conversations that drive impact and connections that can change everything. This is more than just a conference. This is a moment in Bitcoin's history.  
