--- a/_posts/2025-03-19-bookclub.md
+++ b/_posts/2025-03-19-bookclub.md
@@ -23,6 +23,7 @@ comments: true
 Hidden Repression by Alex Gladstein explores the intersection of authoritarian regimes and financial control, shedding light on how governments use traditional financial systems to silence dissent, fund oppressive policies, and manipulate their populations. Gladstein highlights real-world examples of financial repression and censorship, showcasing how Bitcoin empowers individuals to resist these forces. The book emphasizes Bitcoin as a tool for fostering transparency, accountability, and personal liberty, particularly in environments where traditional systems fail to protect human rights.  
 
 📙 Buy the book on [Amazon](https://a.co/d/3kURdKc) or at the [Bitcoin Magazine Book Store](https://store.bitcoinmagazine.com/collections/books/products/hidden-repression)  
+📙 Read the book [online](https://bitcoinmagazine.com/culture/imf-world-bank-repress-poor-countries).  
 
 👉 Follow Alex on [Nostr](http://primal.net/gladstein) & [Twitter/X](https://x.com/gladstein)  
 👉 Visit the [Human Rights Foundation](https://hrf.org/)    
