--- a/_posts/2025-04-16-bookclub.md
+++ b/_posts/2025-04-16-bookclub.md
@@ -1,9 +1,8 @@
 ---
-title: "Book Club: TBD"
-draft: true
+title: "Book Club: When Money Dies"
 date: 2025-04-16 18:30:00 -04:00
 end_date: 2025-04-16 20:30:00 -04:00
-rsvp_url: "https://www.meetup.com/bitcoin-district/events/#########"
+rsvp_url: "https://www.meetup.com/bitcoin-district/events/306805314"
 description: "Check out the Bitcoin District Book Club. Join us as we meet every month to dive into new and exciting rabbit holes through reading Bitcoin related books!"
 venue: compass-1703h
 layout: event
@@ -20,7 +19,11 @@ tags:
     - bookclub
 comments: true
 ---
+*When Money Dies: The Nightmare of Deficit Spending, Devaluation, and Hyperinflation in Weimar Germany by Adam Fergusson*
 
+In 1923, with its currency effectively worthless (the exchange rate in December of that year was one dollar to 4,200,000,000,000 marks), the German republic was all but reduced to a barter economy. Expensive cigars, artworks, and jewels were routinely exchanged for staples such as bread; a cinema ticket could be bought for a lump of coal; and a bottle of paraffin for a silk shirt. People watched helplessly as their life savings disappeared and their loved ones starved. Germany's finances descended into chaos, with severe social unrest in its wake.  
+
+Money may no longer be physically printed and distributed in the voluminous quantities of 1923. However, "quantitative easing," that modern euphemism for surreptitious deficit financing in an electronic era, can no less become an assault on monetary discipline. Whatever the reason for a country's deficit— necessity or profligacy, unwillingness to tax or blindness to expenditure— it is beguiling to suppose that if the day of reckoning is postponed economic recovery will come in time to prevent higher unemployment or deeper recession. What if it does not? Germany in 1923 provides a vivid, compelling, sobering moral tale.  
  
 
-📙 Buy the book on [Amazon](https://a.co).  
+📙 Buy the book on [Amazon](https://a.co/d/6ewVUn9).  
