event updates, added somd meetup

--- a/_posts/2025-06-25-bpi.md
+++ b/_posts/2025-06-25-bpi.md
@@ -4,8 +4,8 @@ date: 2025-06-25 08:00:00 -04:00
 end_date: 2025-06-25 17:00:00 -04:00
 rsvp_url: "https://www.btcpolicy.org/"
 description: "BPI will host the 2025 Bitcoin Policy Summit where top executives, policymakers, and experts will set the course for American leadership in the digital age."
-venue: "Venue TBD"
-address: "Address TBD"
+venue: "Ronald Reagan Building"
+address: "1300 Pennsylvania Avenue NW, Washington, DC"
 layout: event
 header:
     image: "/assets/img/events/bpisummit.jpg"
