--- a/_posts/2025-09-30-btcindc.md
+++ b/_posts/2025-09-30-btcindc.md
@@ -4,8 +4,8 @@ date: 2025-09-30 09:00:00 -04:00
 end_date: 2025-10-01 17:00:00 -04:00
 rsvp_url: "https://btcindc.com/"
 description: "Join industry leaders, technologists, investors and visionaries as we explore and shape the future of Bitcoin during a new conference in downtown DC."
-venue: "Venue TBD"
-address: "Address TBD"
+venue: "Kennedy Center"
+address: "2700 F St NW, Washington, DC 20566"
 layout: event
 header:
     og_image: "/assets/img/events/btcindc.jpg"
@@ -21,7 +21,7 @@ comments: false # enable if discussions are useful on this post
 
 **BTC in DC** is a new conference in downtown DC. Join industry leaders, technologists, investors and visionaries as we explore and shape the future of Bitcoin, right at the core of decision making. Speakers who are shaping the future, conversations that drive impact and connections that can change everything. This is more than just a conference. This is a moment in Bitcoin's history.  
 
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/togDCcvNZYY?si=_VJAwo33cKLoq_Xp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/8g6WyWp6a50?si=QmtywizhgMgwwB9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 🌐 Official Website: [https://btcindc.com](https://btcindc.com)
 
