--- a/_posts/2025-08-21-bitdevs18.md
+++ b/_posts/2025-08-21-bitdevs18.md
@@ -8,6 +8,7 @@ venue: strategyhq
 layout: event
 author_profile: true
 author: DC BitDevs
+draft: true
 header:
     image: "/assets/img/events/bitdevs.jpg"
     og_image: "/assets/img/events/bitdevs.jpg"
