--- a/_posts/2025-07-17-bitdevs17.md
+++ b/_posts/2025-07-17-bitdevs17.md
@@ -2,13 +2,13 @@
 title: "DC BitDevs #017"
 date: 2025-07-17 17:30:00 -04:00
 end_date: 2025-07-17 21:30:00 -04:00
-rsvp_url: "https://www.meetup.com/dc-bit-devs/events/308542859"
+rsvp_url: "https://www.meetup.com/dc-bit-devs/events/309661223"
 description: "A community for those interested in discussing and participating in the research and development of Bitcoin and related protocols."
-venue: strategyhq
 layout: event
 author_profile: true
 author: DC BitDevs
-draft: true
+venue: Elliot School of International Affairs
+address: 1957 E St NW, Washington, DC 20052
 header:
     image: "/assets/img/events/bitdevs.jpg"
     og_image: "/assets/img/events/bitdevs.jpg"
