--- a/_posts/2025-07-27-lemonade.md
+++ b/_posts/2025-07-27-lemonade.md
@@ -6,8 +6,8 @@ rsvp_url: "https://www.meetup.com/bitcoin-district/events/309655486"
 description: "Join us for a fun, community meetup to support Asher, a 6-year-old kidpreneur behind District Lemonade!"
 layout: event
 author_profile: false
-venue: Dupont Circle Fountain
-address: 21 Dupont Cir NW, Washington, DC 20036
+venue: "Dupont Circle Fountain"
+address: "21 Dupont Cir NW, Washington, DC 20036"
 header:
     image: "/assets/img/events/lemonade.jpg"
     og_image: "/assets/img/events/lemonade.jpg"
