--- a/_posts/2025-07-17-bitdevs17.md
+++ b/_posts/2025-07-17-bitdevs17.md
@@ -7,8 +7,8 @@ description: "A community for those interested in discussing and participating i
 layout: event
 author_profile: true
 author: DC BitDevs
-venue: Elliot School of International Affairs
-address: 1957 E St NW, Washington, DC 20052
+venue: "Elliot School of International Affairs"
+address: "1957 E St NW, Washington, DC 20052, USA"
 header:
     image: "/assets/img/events/bitdevs.jpg"
     og_image: "/assets/img/events/bitdevs.jpg"
