--- a/_posts/2025-07-27-lemonade.md
+++ b/_posts/2025-07-27-lemonade.md
@@ -7,7 +7,7 @@ description: "Join us for a fun, community meetup to support Asher, a 6-year-old
 layout: event
 author_profile: false
 venue: "Dupont Circle Fountain"
-address: "21 Dupont Cir NW, Washington, DC 20036"
+address: "21 Dupont Cir NW, Washington, DC 20036, USA"
 header:
     image: "/assets/img/events/lemonade.jpg"
     og_image: "/assets/img/events/lemonade.jpg"
