--- a/_posts/2025-08-12-workshop.md
+++ b/_posts/2025-08-12-workshop.md
@@ -3,11 +3,10 @@ title: "Self Custody Workshop"
 date: 2025-08-12 18:00:00 -04:00
 end_date: 2025-08-12 20:00:00 -04:00
 rsvp_url: "https://www.meetup.com/bitcoin-district/events/310131584"
-description: ""
+description: "Learn the fundamentals of Bitcoin self-custody."
 venue: "Compass Coffee"
-address: "1201 Wilson Blvd, Rosslyn, VA 22209"
+address: "1201 Wilson Blvd, Rosslyn, VA 22209, USA"
 layout: event
-draft: true
 author_profile: false
 header:
     image: "/assets/img/events/self-custody-workshop.jpg"
@@ -50,5 +49,9 @@ This hands-on workshop is perfect for both beginners who want to learn the funda
 We highly encourage anyone who is new to Bitcoin or just a little curious to come and ask questions... don't be shy! This is a judgment-free learning environment where we support each other in understanding Bitcoin's technical aspects.  
 
 Note: We'll be doing live demonstrations, but this is an educational workshop only. Any hardware wallet purchases or setup decisions are entirely your own. Nothing discussed during this workshop is financial advice. Always do your own research.  
+
+## Getting There:
+🚇 Metro: Rosslyn Station via the Blue, Orange or Silver lines  
+🚗 Parking: There are several parking garages in the area as well as many spots along the streets. Remember to check signage.  
 
 Our events are Bitcoin focused and we generally avoid discussing other coins & tokens. There are plenty of other Meetups to discuss other cryptos and blockchains.
