--- a/_posts/2025-09-30-btcindc.md
+++ b/_posts/2025-09-30-btcindc.md
@@ -5,7 +5,7 @@ end_date: 2025-10-01 17:00:00 -04:00
 rsvp_url: "https://btcindc.com/"
 description: "Join industry leaders, technologists, investors and visionaries as we explore and shape the future of Bitcoin during a new conference in downtown DC."
 venue: "Kennedy Center"
-address: "2700 F St NW, Washington, DC 20566"
+address: "2700 F St NW, Washington, DC 20566, USA"
 layout: event
 header:
     og_image: "/assets/img/events/btcindc.jpg"
